--- a/View/home.html
+++ b/View/home.html
@@ -7,57 +7,80 @@
     <link href="Formatacao/style.css" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
      
-    <title>Bem vindo ao meu  Portfólio</title>
+    <title>Robson Duarte Portfólio</title>
 </head>
 <body>
-    <header>      
-        <nav>
-            <ul>
-                <li class="border_between"><a href="#Git">Contato</a></li>
-                <li><a href="#Contato">Projetos</a></li>
-            </ul>
-        </nav>  
+    <nav>        
+        <li><a href="#">Linkedin {{link}}</a></li>
+        <li><a href="#">Github {{git}}</a></li>         
+    </nav> 
 
-        <h1>Bem vindo ao meu Portfólio</h1>
-        <p>Meu nome é Robson Duarte dos Santos</p>
-        <p>Apaixonado por desenvolvimento</p>         
+    <header>       
+        <section>
+            <article>
+                <div class='apresentation'>
+                    <figure>
+                        <img src="img/t.jpg" alt="">
+                    </figure>
+                    <div>
+                        <p class="apresentacao"><b>Nome:</b> Robson Duarte dos Santos</p>
+                        <p class="apresentacao"> <b>Local:</b> Jardim Botânico , Rio de Janeiro - Brasil</p>
+                    </div>
+                </div>
+                <div>
+                    <p class="sobre">Sobre</p>
+                    <p>
+                        Sou estudante de Ciencia da Computação na Universidade 
+                        Federal do Rio de Janeiro - UFRJ. Apaixonado por  traduzir
+                        um problema real em algo que computador entenda.
+                        Me trazendo imensa satisfação se na resolução do problema eu consiga ajudar alguém.
+                     </p>
+                </div>
+                <div class="container">
+                    <h2>Conhecimentos</h2>
+                    <div class="skills">                    
+                            <div class="teste">                       
+                                {{js}}                           
+                                <p>Javascript</p>                         
+                            </div>
+                            <div class="teste">
+                                {{html}}                                               
+                                <p>HTML</p>                            
+                            </div>
+                            <div class="teste">
+                               {{css}}                          
+                               <p>CSS</p>                            
+                            </div>
+
+                        <div class="teste">
+                            {{php}}
+                            <p>PHP</p>                            
+                        </div>
+                        <div class=" teste">
+                            {{sql}}                       
+                            <p>SQL</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
     </header>
+    <div class="between"></div>
     <main>
-        <section>
-            <article class='content-right show-on-scroll-right'>
-                imagem do site
+        <section >
+            <article class='content-right show-on-scroll-right'>                 
+                <iframe src="{{ifram_ivana}}" frameborder="0" title="portfolio" scrolling="no"></iframe>
+                <a href="#/" class="iframe_overlay" onclick="newTab('{{web_ivana}}')"></a>
+
+                <a href="#/" onclick="newTab('{{git_web_ivana}}')">
+                    <p>Codigo fonte</p>
+                </a>
             </article>
-            <article class="content-left show-on-scroll-left">
-                descrição do projeto e tecnologias utilizadas 
-            </article>            
-        </section>
-        <section>
-            <article class='content-right show-on-scroll-right'>
-                imagem do site
-            </article>
-            <article class="content-left show-on-scroll-left">
-                descrição do projeto e tecnologias utilizadas 
-            </article>            
-        </section>
-        <section id='Git'>
-            <article class='content-right show-on-scroll-right'>
-                <p>Quer ver por baixo dos panos?</p> 
-                <p>Acesse meu GitHub</p>
-            </article>
-            <article class="content-left show-on-scroll-left">
-                icone GitHub
-            </article>            
-        </section>
-        <section id='Contato'>
-            <article class='content-right show-on-scroll-right'>
-                <p>Quer entrar em contato?</p> 
-                <p>Me mande uma mensagem</p>
-            </article>
-            <article class="content-left show-on-scroll-left">
-                espaço para mensagem
-            </article>            
-        </section>
-        
-    </main>            
+           <!--  <article class="content-left show-on-scroll-left">
+                <p>Codigo fonte</p>
+            </article> -->                        
+        </section>       
+    </main> 
+    <footer></footer>           
 </body>
 </html>
