--- a/Formatacao/style.css
+++ b/Formatacao/style.css
@@ -1,38 +1,6 @@
-/* variables*/
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 25px;
-}
-
-body {
-  background-color: #FFFAFA;
-}
-
-header {
-  background-color: #000000;
-  width: 100%;
-  height: 300px;
-}
-
-header p {
-  color: #FFFAFA;
+nav {
   text-align: center;
-  padding: 20px 0 0 0;
-}
-
-header h1 {
-  color: #FFFAFA;
-  text-align: center;
-  padding: 100px 0 0 0;
-}
-
-header ul {
-  padding: 20px;
-  margin-right: 20px;
+  font-size: 1.3em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -40,63 +8,416 @@ header ul {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  list-style: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px;
+  background-color: #80e1ff;
 }
 
-header a {
-  width: 8.33%;
-  color: #FFFAFA;
+nav li {
+  list-style: none;
+  font-weight: 800;
+  padding: inherit;
+}
+
+nav li a {
   text-decoration: none;
-  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav li a svg {
+  width: clamp(30px, 50px, 60px);
+  height: clamp(30px, 50px, 60px);
+  padding: 5px;
+}
+
+nav li a:focus, nav li a:link, nav li a:active, nav li a:visited {
+  color: black;
+}
+
+@media only screen and (min-width: 768px) {
+  nav {
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+  }
+}
+
+/* variables*/
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+}
+
+header {
+  background-color: #FFFAFA;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
+header section {
+  -webkit-box-shadow: 0 4px 8px 0 white, 0 6px 20px 0 white;
+          box-shadow: 0 4px 8px 0 white, 0 6px 20px 0 white;
+  max-width: 100%;
+  border-radius: 20px;
+}
+
+header section article {
+  max-height: 100%;
+}
+
+header section article figure {
+  padding: 5px;
+}
+
+header section article figure img {
+  width: clamp(100px, 100%, 400px);
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  border-radius: 20px;
+}
+
+header section article p {
+  color: #000000;
+  line-height: 1.6;
+  font-size: 1.2rem;
+  padding: 5px;
+  max-width: 600px;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+}
+
+.sobre {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+.skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 100%;
+}
+
+.container {
+  max-width: 100%;
+}
+
+.container h2 {
+  max-width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 2rem;
+}
+
+.knowledge {
+  max-width: 100%;
+  text-align: center;
+}
+
+.between {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFAFA), to(#3333ff));
+  background-image: linear-gradient(to bottom, #FFFAFA, #3333ff);
+  height: 5vh;
+  width: 100%;
+}
+
+.teste {
+  width: 33.33%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.teste svg {
+  height: clamp(5vh, 10vh, 50px);
+  max-width: 100%;
+}
+
+.teste p {
+  text-align: center;
+  font-size: .8rem;
+  font-weight: bold;
+  font-family: 'Mochiy Pop P One', sans-serif;
 }
 
 main {
-  background-color: #FFFAFA;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3333ff), to(#80e1ff));
+  background-image: linear-gradient(#3333ff, #80e1ff);
 }
 
 main section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section article {
+  display: inherit;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main section article p {
+  width: 33.3%;
+  font-size: 1.3rem;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  font-style: italic;
+  text-align: center;
+  width: 100%;
+  font-weight: bold;
+  color: white;
+}
+
+main section article a:link {
+  text-decoration: none;
+}
+
+main section article iframe {
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: 7px -10px 10px 0 #3333ff;
+          box-shadow: 7px -10px 10px 0 #3333ff;
+  border-radius: 10px;
+}
+
+main section article .iframe_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 95%;
+  z-index: 5;
 }
 
 .content-right, .content-left {
-  width: 33.33%;
+  width: 83.33%;
   height: 400px;
-  margin: 50px;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 30px;
   opacity: 0;
-  -webkit-transform: translateX(-40px);
-          transform: translateX(-40px);
+  -webkit-transform: translateX(-30px);
+          transform: translateX(-30px);
   -webkit-transition: opacity 0.3s 0.25s ease-out, -webkit-transform 3s 0.2s cubic-bezier(0, 1, 0.3, 1);
   transition: opacity 0.3s 0.25s ease-out, -webkit-transform 3s 0.2s cubic-bezier(0, 1, 0.3, 1);
   transition: transform 3s 0.2s cubic-bezier(0, 1, 0.3, 1), opacity 0.3s 0.25s ease-out;
   transition: transform 3s 0.2s cubic-bezier(0, 1, 0.3, 1), opacity 0.3s 0.25s ease-out, -webkit-transform 3s 0.2s cubic-bezier(0, 1, 0.3, 1);
-  will-change: transform, opacity;
+  will-change: transform, opacity;
+}
+
+.content-right div, .content-left div {
+  width: 100%;
+  height: 90%;
+}
+
+.content-right div svg, .content-left div svg {
+  width: 100%;
+  height: 100%;
+}
+
+footer {
+  width: 100%;
+  height: 10vh;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#80e1ff), to(#3333ff));
+  background-image: linear-gradient(#80e1ff, #3333ff);
+}
+
+footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer div h2 {
+  font-size: 1.5rem;
+  color: #FFFAFA;
+}
+
+footer div svg {
+  height: clamp(5vh, 10vh, 50px);
+  max-width: 100%;
 }
 
 .content-left {
-  -webkit-transform: translateX(450px);
-          transform: translateX(450px);
+  -webkit-transform: translateX(30px);
+          transform: translateX(30px);
 }
 
 .is-visible {
   opacity: 1;
-  -webkit-transform: translateX(200px);
-          transform: translateX(200px);
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
 }
 
-.border_between {
-  border-right: 2px solid;
-  border-image-source: linear-gradient(to bottom, #000000, #FFFAFA);
-  border-image-slice: 1;
+@media only screen and (min-width: 768px) {
+  .apresentation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header {
+    width: 100%;
+  }
+  header section {
+    height: 50%;
+  }
+  header section article {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header section article figure {
+    width: 100%;
+    height: 100%;
+    display: inherit;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  header section article figure img {
+    border-radius: 50px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  main section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+  }
+  .teste {
+    width: 16.66%;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  header section {
+    width: 83.33%;
+  }
+  main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  main section {
+    width: 83.33%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  main section article {
+    max-width: 41.66%;
+  }
+  .apresentation figure {
+    width: 41.66%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
