--- a/Formatacao/style.scss
+++ b/Formatacao/style.scss
@@ -1,313 +1,8 @@
+@import 'colors';
+@import 'mixing';
 @import 'navegation';
-
-/* variables*/
-$MyFont:'Josefin Sans', sans-serif;
-$PrimaryColor:#000000;
-$SecondaryColor:#FFFAFA;
-$TertinaryColor:hsl(240, 100%, 60%);
-$fourth_color:hsl(194, 100%, 75%);
-$FontSize:25px;
-
-@mixin col-1 {width: 8.33%;}
-@mixin col-2 {width: 16.66%;}
-@mixin col-3 {width: 25%;}
-@mixin col-4 {width: 33.33%;}
-@mixin col-5 {width: 41.66%;}
-@mixin col-6 {width: 50%;}
-@mixin col-7 {width: 58.33%;}
-@mixin col-8 {width: 66.66%;}
-@mixin col-9 {width: 75%;}
-@mixin col-10 {width: 83.33%;}
-@mixin col-11 {width: 91.66%;}
-@mixin col-12 {width: 100%;}
-
-*,*::before,*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;   
-}
-
-html{
-    box-sizing: border-box;      
-}
-body{
-    min-height: 100vh;             
-}
-
-header{    
-    background-color: $SecondaryColor;
-    @include col-12;     
-    display: flex;
-    flex-direction: column;
-    align-items: center;    
-    justify-content: center;  
-    padding-top: 5vh;
-    padding-bottom: 5vh;    
-       
-    section{
-        box-shadow: 0 4px 8px 0 rgb(255, 255, 255),
-                    0 6px 20px 0 rgb(255, 255, 255);
-        max-width: 100%;         
-        border-radius: 20px; 
-        
-        article{                    
-            max-height: 100%;                                                
-            figure{ 
-                padding: 5px;                                                      
-                img{    
-                   width: clamp(100px,100%,400px);              
-                   max-width: 100%;
-                   max-height: 100%;
-                   object-fit: contain;
-                   border-radius: 20px;                                                                
-                }              
-            }
-            p
-            {        
-                color: $PrimaryColor;        
-                line-height: 1.6;
-                font-size: 1.2rem;
-                padding: 5px;                
-                max-width: 600px;  
-                hyphens:auto;           
-            }
-        }
-    }    
-}
-.sobre{
-    font-size: 2rem;
-    text-align: center;   
-    font-weight: bold;
-}
-
-.skills 
-{       
-    display: flex;      
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;    
-    max-width: 100%;
-}
-.container {
-    max-width: 100%;
-    h2{
-        max-width: 100%;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-size: 2rem;
-    }
-}
-
-.knowledge{
-    max-width: 100%;
-    text-align: center;
-}
-.between{
-    background-image: linear-gradient(to bottom,$SecondaryColor,$TertinaryColor); 
-    height: 5vh;
-    @include col-12;
-}
-.teste
-{    
-    @include col-4;    
-    display: flex;
-    flex-direction: column;
-    align-items: center;    
-    svg{        
-        height: clamp(5vh,10vh,50px); 
-        max-width: 100%;                          
-    }
-    p{        
-        text-align: center;
-        font-size: .8rem;
-        font-weight: bold;        
-        font-family: 'Mochiy Pop P One', sans-serif;
-    }
-} 
-
-main{   
-    background-image: linear-gradient($TertinaryColor,hsl(194, 100%, 75%)); 
-    
-    section{
-        display: flex;
-        flex-flow: column nowrap;  
-        justify-content: center;
-        align-items: center;
-        
-        article{             
-            display: inherit;
-            justify-content: center;
-            
-            p{
-                width: 33.3%;
-                font-size: 1.3rem;
-                align-self: flex-end;
-                font-style:italic;                                     
-                text-align: center;
-                width: 100%;
-                font-weight: bold;  
-                color: white;                                                                         
-            }
-            a:link{
-                text-decoration: none;
-            } 
-            iframe
-            {
-                width: 100%;
-                height: 100%;   
-                box-shadow: 7px -10px 10px 0 $TertinaryColor;                   
-                border-radius: 10px;                         
-            } 
-            .iframe_overlay
-            {
-                position:absolute;
-                top:0;
-                left:0;               
-                width: 100%;
-                height:95%;
-                z-index:5;                
-            }             
-        }     
-    }
-}
-
-.content-right{   
-    @include col-10;
-    height:400px; 
-    display: flex;
-    flex-direction: column;   
-    justify-content: space-around;     
-    margin:30px; 
-    
-    opacity: 0; 
-    transform: translateX(-30px); 
-    transition: transform 3s .20s cubic-bezier(0,1,0.3,1),
-                opacity .3s .25s ease-out;         
-    will-change: transform,
-                 opacity;    
-    
-    div{ 
-        @include col-12;
-        height: 90%; 
-         
-        svg{            
-            width: 100%;
-            height: 100%;   
-                   
-        }                
-    }  
-}
-
-footer{
-    @include col-12;
-    height: 10vh;
-    background-image: linear-gradient(hsl(194, 100%, 75%),$TertinaryColor);    
-   div{
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-        h2{
-            font-size: 1.5rem;
-            color: $SecondaryColor;            
-        }
-        svg{
-            height: clamp(5vh,10vh,50px);             
-            max-width: 100%;
-        }
-   }
-}
-
-
-
-.content-left{       
-    @extend .content-right;
-    transform: translateX(30px);    
-}
-
-.is-visible{
-   opacity: 1;
-   transform: translateX(0px);    
-}
-
-
-
-@media only screen and (min-width:768px)
-{
-    .apresentation{
-        display: flex;
-        justify-content: center;
-        align-items: center;          
-    }
-
-    header{        
-        @include col-12;        
-        section{             
-            height: 50%;
-                                                     
-            article{                       
-               height: 100%;
-               display: flex;  
-               flex-direction: column;
-               justify-content: center; 
-               align-items: center;               
-                    
-                figure{    
-                    @include col-12;                      
-                    height: 100%;             
-                    display: inherit;
-                    align-items: center;
-                    justify-content: center;                        
-                    
-                    img{
-                        border-radius: 50px;
-                        height: fit-content;
-                    }                                   
-                } 
-            }              
-        }       
-    } 
-    main{       
-        section{           
-            flex-flow: row wrap;
-                     
-        }
-    }  
-    
-    .teste{
-        @include col-2;        
-    }
-}
-
-@media only screen and (min-width:1080px){
-    header
-    {
-        section
-        {
-            @include col-10;            
-        }
-    }
-    main 
-    {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        section 
-        {           
-            @include col-10;
-            justify-content: center;
-            article
-            {
-                max-width: 41.66%;            
-            }
-        }
-
-    }
-    .apresentation
-    {
-        figure
-        {
-            @include col-5;
-        }
-    }
-}
+@import 'settings';
+@import 'header';
+@import 'main';
+@import 'footer';
+@import 'responsive';
