--- a/View/home.html
+++ b/View/home.html
@@ -34,29 +34,29 @@
                         Federal do Rio de Janeiro - UFRJ. Apaixonado por  traduzir
                         um problema real em algo que computador entenda.
                         Me trazendo imensa satisfação se na resolução do problema eu consiga ajudar alguém.
-                     </p>
+                    </p>
                 </div>
                 <div class="container">
                     <h2>Conhecimentos</h2>
                     <div class="skills">                    
-                            <div class="teste">                       
+                            <div class="logos">                       
                                 {{js}}                           
                                 <p>Javascript</p>                         
                             </div>
-                            <div class="teste">
+                            <div class="logos">
                                 {{html}}                                               
                                 <p>HTML</p>                            
                             </div>
-                            <div class="teste">
+                            <div class="logos">
                                {{css}}                          
                                <p>CSS</p>                            
                             </div>
 
-                        <div class="teste">
+                        <div class="logos">
                             {{php}}
                             <p>PHP</p>                            
                         </div>
-                        <div class=" teste">
+                        <div class=" logos">
                             {{sql}}                       
                             <p>SQL</p>
                         </div>
@@ -64,15 +64,14 @@
                 </div>
             </article>
         </section>
-    </header>
-    <div class="between"></div>
+    </header>    
     <main>
         <section >
             <article class='content-right show-on-scroll-right'>                 
-                <iframe src="{{ifram_ivana}}" frameborder="0" title="portfolio" scrolling="no"></iframe>
+                <iframe src="{{web_ivana}}" frameborder="0" title="portfolio" scrolling="no"></iframe>
                 <a href="#/" class="iframe_overlay" onclick="newTab('{{web_ivana}}')"></a>
 
-                <a href="#/" onclick="newTab('{{git_web_ivana}}')">
+                <a href="#/" onclick="newTab('{{git_web_ivana}}')" class="C_font">
                     <p>Codigo fonte</p>
                 </a>
             </article>
