--- a/Formatacao/style.css
+++ b/Formatacao/style.css
@@ -12,7 +12,7 @@ nav {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 10px;
-  background-color: #80e1ff;
+  background-color: #091031;
 }
 
 nav li {
@@ -38,7 +38,7 @@ nav li a svg {
 }
 
 nav li a:focus, nav li a:link, nav li a:active, nav li a:visited {
-  color: black;
+  color: #C7D0FB;
 }
 
 @media only screen and (min-width: 768px) {
@@ -67,7 +67,7 @@ body {
 }
 
 header {
-  background-color: #FFFAFA;
+  background-color: #C7D0FB;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -87,8 +87,6 @@ header {
 }
 
 header section {
-  -webkit-box-shadow: 0 4px 8px 0 white, 0 6px 20px 0 white;
-          box-shadow: 0 4px 8px 0 white, 0 6px 20px 0 white;
   max-width: 100%;
   border-radius: 20px;
 }
@@ -111,23 +109,23 @@ header section article figure img {
 }
 
 header section article p {
-  color: #000000;
+  color: #091031;
   line-height: 1.6;
   font-size: 1.2rem;
   padding: 5px;
-  max-width: 600px;
+  max-width: 80ch;
   -webkit-hyphens: auto;
       -ms-hyphens: auto;
           hyphens: auto;
 }
 
-.sobre {
+header .sobre {
   font-size: 2rem;
   text-align: center;
   font-weight: bold;
 }
 
-.skills {
+header .skills {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -144,11 +142,12 @@ header section article p {
   max-width: 100%;
 }
 
-.container {
+header .container {
   max-width: 100%;
+  color: #C7D0FB;
 }
 
-.container h2 {
+header .container h2 {
   max-width: 100%;
   text-align: center;
   margin-top: 10px;
@@ -156,19 +155,7 @@ header section article p {
   font-size: 2rem;
 }
 
-.knowledge {
-  max-width: 100%;
-  text-align: center;
-}
-
-.between {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFAFA), to(#3333ff));
-  background-image: linear-gradient(to bottom, #FFFAFA, #3333ff);
-  height: 5vh;
-  width: 100%;
-}
-
-.teste {
+header .logos {
   width: 33.33%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,21 +169,29 @@ header section article p {
           align-items: center;
 }
 
-.teste svg {
+header .logos svg {
   height: clamp(5vh, 10vh, 50px);
   max-width: 100%;
 }
 
-.teste p {
+header .logos p {
   text-align: center;
-  font-size: .8rem;
+  font-size: 1rem;
   font-weight: bold;
   font-family: 'Mochiy Pop P One', sans-serif;
 }
 
+.C_font {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 main {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#3333ff), to(#80e1ff));
-  background-image: linear-gradient(#3333ff, #80e1ff);
+  background-color: #091031;
 }
 
 main section {
@@ -223,15 +218,28 @@ main section article {
 }
 
 main section article p {
-  width: 33.3%;
+  margin-top: 5px;
+  padding-bottom: 5px;
+  width: 15ch;
   font-size: 1.3rem;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
   font-style: italic;
-  text-align: center;
-  width: 100%;
   font-weight: bold;
-  color: white;
+  text-align: center;
+  border-radius: 15px;
+  border: 2px solid #6A82F6;
+  background-color: white;
+  color: #091031;
+  background: -webkit-gradient(linear, right top, left top, color-stop(50%, #C7D0FB), color-stop(50%, #091031)) right;
+  background: linear-gradient(to left, #C7D0FB 50%, #091031 50%) right;
+  background-size: 200%;
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
+}
+
+main section article p:hover {
+  background-position: left;
+  border-color: #6A82F6;
+  color: #C7D0FB;
 }
 
 main section article a:link {
@@ -241,8 +249,8 @@ main section article a:link {
 main section article iframe {
   width: 100%;
   height: 100%;
-  -webkit-box-shadow: 7px -10px 10px 0 #3333ff;
-          box-shadow: 7px -10px 10px 0 #3333ff;
+  -webkit-box-shadow: 7px -10px 10px 0 #C7D0FB;
+          box-shadow: 7px -10px 10px 0 #C7D0FB;
   border-radius: 10px;
 }
 
@@ -288,36 +296,6 @@ main section article .iframe_overlay {
   height: 100%;
 }
 
-footer {
-  width: 100%;
-  height: 10vh;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#80e1ff), to(#3333ff));
-  background-image: linear-gradient(#80e1ff, #3333ff);
-}
-
-footer div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-footer div h2 {
-  font-size: 1.5rem;
-  color: #FFFAFA;
-}
-
-footer div svg {
-  height: clamp(5vh, 10vh, 50px);
-  max-width: 100%;
-}
-
 .content-left {
   -webkit-transform: translateX(30px);
           transform: translateX(30px);
@@ -327,6 +305,12 @@ footer div svg {
   opacity: 1;
   -webkit-transform: translateX(0px);
           transform: translateX(0px);
+}
+
+footer {
+  width: 100%;
+  height: 10vh;
+  background-color: #091031;
 }
 
 @media only screen and (min-width: 768px) {
@@ -379,6 +363,9 @@ footer div svg {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+  }
+  header section article div {
+    max-width: 75%;
   }
   main section {
     -webkit-box-orient: horizontal;
