--- a/View/home.html
+++ b/View/home.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <nav>        
-        <li><a href="#">Linkedin {{link}}</a></li>
-        <li><a href="#">Github {{git}}</a></li>         
+        <li><a href="#/" onclick="newTab('{{my_linkedin}}')">Linkedin {{link}}</a></li>
+        <li><a href="#/" onclick="newTab('{{my_github}}')">Github {{git}}</a></li>         
     </nav> 
 
     <header>       
